--- a/sample/src/main/res/layout/content_main.xml
+++ b/sample/src/main/res/layout/content_main.xml
@@ -131,7 +131,33 @@
                 app:tag_clickable="false"
                 app:tag_theme="random"
                 app:vertical_interval="10dp" />
+
+            <co.lujun.androidtagview.TagContainerLayout
+                android:id="@+id/tagcontainerLayout6"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:layout_margin="0dp"
+                android:paddingTop="12dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                app:container_enable_drag="false"
+                app:horizontal_interval="10dp"
+                app:vertical_interval="10dp"
+                app:tag_clickable="true"
+                app:tag_theme="none"
+                app:tag_selectable="true"
+                app:container_border_width="0dp"
+                app:container_border_color="#00FFFFFF"
+                app:container_background_color="#00FFFFFF"
+                app:tag_background_color="#fff"
+                app:tag_corner_radius="10dp"
+                app:tag_border_color="#ff3322"
+                app:tag_text_color="#ff3322" />
+
         </LinearLayout>
+
+
 
     </ScrollView>
 
