--- a/androidtagview/src/main/res/values/attrs.xml
+++ b/androidtagview/src/main/res/values/attrs.xml
@@ -29,6 +29,7 @@
         <attr name="tag_max_length" format="integer" />
         <attr name="tag_clickable" format="boolean" />
         <attr name="tag_selectable" format="boolean" />
+        <attr name="tag_multiselection_allowed" format="boolean" />
         <attr name="tag_theme" format="enum">
             <enum name="none" value="-1" />
             <enum name="random" value="0" />
